alteração de imagems

--- a/english.html
+++ b/english.html
@@ -48,7 +48,7 @@
             <h1>Catch and train your own team in PokeXGames</h1>
             <div class="container-flechas">     
                 <div>
-                    <img src="img/Pokemon/carrosel1.webp" alt="" class="img-carrosel" data-img data-eng>
+                    <img src="img/Fundos/carrosel1.png" alt="" class="img-carrosel" data-img>
                     <span class="span" data-span-eng>There are over 400 creatures!!</span>
                 </div>   
             </div>
