--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <header>
         <nav class="container-nav">
             <div class="logo">
-                <a href="#"><img src="img/Redes Sociais/instagram.png" alt="" class="sociais"></a>
-                <a href="#"><img src="img/Redes Sociais/facebook.png" alt="" class="sociais"></a>
+                <a href=""><img src="img/Redes Sociais/instagram.png" alt="" class="bandeiras"></a>
+                <a href=""><img src="img/Redes Sociais/facebook.png" alt="" class="sociais"></a>
             </div>
             <ul>
-                <li><a href="#" class="inicio initMenu">INICIO</a></li>
-                <li><a href="#" class="conta initMenu">CRIAR CONTA</a></li>
-                <li><a href="#" class="sessao initMenu">INICIAR SESSÃO</a></li>
+                <li><a href="" class="inicio initMenu">INICIO</a></li>
+                <li><a href="" class="conta initMenu">CRIAR CONTA</a></li>
+                <li><a href="" class="sessao initMenu">INICIAR SESSÃO</a></li>
                 <li><a href="index.html" ><img src="img/Bandeiras/bandeira.png" alt="" class="bandeiras"></a></li>
                 <li><a href="english.html" data-ingles><img src="img/Bandeiras/Eua.webp" alt="" class="bandeiras" ></a></li>
             </ul>
@@ -50,7 +50,7 @@
             <h1>Capture e treine seu próprio time na PokeXGames</h1>
             <div class="container-flechas">     
                 <div>
-                    <img src="img/Pokemon/carrosel1.webp" alt="" class="img-carrosel" data-img>
+                    <img src="img/Fundos/carrosel1.png" alt="" class="img-carrosel" data-img>
                     <span class="span">São mais de 400 criaturas!</span>
                 </div>   
             </div>
