--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <div class="corte2"></div>
     <div class="corte"></div>
-
+ <!--3° SEÇÃO-->
     <!--3° SEÇÃO-->
     <section class="container-sobre">
         <div class="conteudo-sobre">
